--- a/adaguc-checker.env
+++ b/adaguc-checker.env
@@ -1,3 +1,4 @@
 export OUTPUT_DIR="/tmp/output_dir"
 export INPUT_DIR="/tmp/input_dir"
-export ADAGUC_CHECKER_IMAGE="adaguc-checker:20180313"
+export ADAGUC_CHECKER_IMAGE="registry.gitlab.com/knmi/eu-team/crucial/adaguc-server:checker-v0.2"
+export LOGGING_DIR=${OUTPUT_DIR}
